--- a/review.html
+++ b/review.html
@@ -40,22 +40,24 @@
                 <h2>Please leave a review of my website!</h2>
               </div>
 
-              <div class="container">
+              <div class="container" >
+
                 <div class="row">
-                  <form onsubmit="buildTableRow(1)">
+                  <form id="form" onsubmit="feedbackUpdate()">
                   <div class="col-25">
                     <label for="fname">First Name</label>
                   </div>
                     <div class="col-75">
-                      <input type="text" placeholder="Your name.." id="fname" required >
+                      <input type="text" placeholder="Your name.." id="fname" name="fname" required >
                     </div>
                   </div>  
+
                 <div class="row">
                   <div class="col-25">
                     <label for="lname">Last Name</label>
                   </div>
                   <div class="col-75">  
-                    <input type="text" placeholder="Your last name.." id="lname" required >
+                    <input type="text" required placeholder="Your last name.." id="lname" name="lname" >
                   </div>
                 </div>
                
@@ -67,17 +69,21 @@
                     <input type="date" placeholder ="Date.." id="date" required >
                   </div>
                 </div>
+
                 <div class="row">
                   <div class="col-25">
                    <label for="feedback">Feedback</label>
                   </div>
                   <div class="col-75">
-                    <textarea id="feedback" name="feedback" placeholder="Write something.." style="height:200px" required></textarea>
+                    <textarea id="feedback" name="feedback" placeholder="Write something.." style="height:200px" required ></textarea>
                   </div>
+
                 </div>
+
                 <div class="sub">
-                  <button type="button" id="updateButton" onclick="feedbackUpdate();">Submit</button>
+                  <button type="submit" id="updateButton" >Submit</button>
                 </div>
+
               </form>
               </div>
             
