--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
         <div class="container">
-            <a class="navbar-brand" href="#">Andrei Cruceru</a>
+            <a class="navbar-brand" href="index.html">Andrei Cruceru</a>
             <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
     </nav>
 
     <div id="myself">
-        <img src="static/about/css/myself.jpeg" width="190" height="190" alt=myself">
+        <img src="static/about/css/myself.jpeg" width="290" height="360" alt=myself">
     </div>
 
     <div id="introduction">
