--- a/about.html
+++ b/about.html
@@ -32,9 +32,10 @@
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Projects </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="BlueJ-Game.html">BlueJ Game</a>
-                            <a class="dropdown-item" href="#">App05</a>
-                            <a class="dropdown-item" href="#">App04</a>
+                            <a class="dropdown-item" href="BlueJ-Game.html">Zuul Game</a>
+                            <a class="dropdown-item" href="https://github.com/andreicruceru95/AndreiCruceru-BlueJ/wiki/App04-Product-Stock-Control " target="_blank" rel="noopener noreferrer">
+                                Stock App</a>
+                            <a class="dropdown-item" href="https://github.com/andreicruceru95/AndreiCruceru-BlueJ/wiki/App03-Student-Grades" target="_blank" rel="noopener noreferrer" >Sudents App</a>
                         </div>
                     </li>
                 </ul>
@@ -67,11 +68,11 @@
         My role involves managing  the projects and on site teams across the country, writing reports and feedbacks, and dealing with customers. <br>
         Many of this projects were carried out for prestigious clients like F1 Williams, Equinix Data Centre, Winchester University, ISS, Licester Hospital, Wycombe Abbey,
         Kawasaky Motors, Johnson & Johnson, Intel, YMCA, Aktrion Group, Hilton and many others. <br><br>
-        About <a href="https://ryemeadgroup.co.uk/">Rymead Group</a>. <br><br>
+        About <a href="https://ryemeadgroup.co.uk/"target="_blank" rel="noopener noreferrer">Rymead Group</a>. <br><br>
         I live in High Wycombe, Buckinghamsire, home of Buckinghamshire New University. I have been living here since 
         December 2015, one year after I graduated college. <br> Before that, I lived in Romania which is the country of my nationality. <br> <br>
-        Visit <a href="https://www.visitbuckinghamshire.org/article/high-wycombe">High Wycombe</a>. <br>
-        Visit <a href="https://www.britannica.com/place/Romania">Romania</a> <br><br>
+        Visit <a href="https://www.visitbuckinghamshire.org/article/high-wycombe"target="_blank" rel="noopener noreferrer">High Wycombe</a>. <br>
+        Visit <a href="https://www.britannica.com/place/Romania"target="_blank" rel="noopener noreferrer">Romania</a> <br><br>
         
         <strong>Past:</strong> <br><br>
         I lived in Romania until 2015. This is where I obtaind many skills and qualifications while attending college. 
@@ -102,8 +103,8 @@
          between 2010-2014. This is where I started learning my first programming language, creating simple aplications and algorithms using
          Pascal. <br><br>
 
-         About <a href="http://cnnt-puc.net/">Colegiul National Nicolaie Titulescu.</a>
-         About <a href="https://en.wikipedia.org/wiki/Pascal_(programming_language)">Pascal.</a> <br><br>
+         About <a href="http://cnnt-puc.net/" target="_blank" rel="noopener noreferrer">Colegiul National Nicolaie Titulescu.</a>
+         About <a href="https://en.wikipedia.org/wiki/Pascal_(programming_language)" target="_blank" rel="noopener noreferrer">Pascal.</a> <br><br>
 
          Here, I studied Microsoft Office and obtained my European Computing Driving License qualification(ECDL). <br><br>
          
@@ -120,7 +121,7 @@
              <li>Project planning</li>
              <li>IT security for users</li>
          </ol> <br><br>
-         More about <a href="https://icdleurope.org/">European Computing Driving License</a>. <br><br>
+         More about <a href="https://icdleurope.org/" target="_blank" rel="noopener noreferrer">European Computing Driving License</a>. <br><br>
 
          I also studied SQL language through an Oracle Academy Program, and obtaind a <strong>Database Design and 
              Programming with SQL</strong> diploma. <br> <br>
@@ -133,7 +134,7 @@
           The company also develops and builds tools for database development and systems of middle-tier software, 
           enterprise resource planning (ERP) software, Human Capital Management (HCM) software, customer relationship 
           management (CRM) software, and supply chain management (SCM) software. <br><br>
-          <a href="https://en.wikipedia.org/wiki/Oracle_Corporation">Wikipedia-Oracle Corporation</a>
+          <a href="https://en.wikipedia.org/wiki/Oracle_Corporation" target="_blank" rel="noopener noreferrer">Wikipedia-Oracle Corporation</a>
     </div>
     <div id="hobbies">
 
