--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
           This being said, a data scientist will never stop learning. <br><br>
 
           Another passion I have is to travel the world. <br>
-          I have already seen a lot of countries and cities, and I put toghether a breakdown of things I learned while visiing them, 
+          I have already seen a lot of countries and cities, and I put toghether a breakdown of things I learned while visiting them, 
             <a href="places-visit.html">here</a>.
     </div>
     <div id="learning">
