--- a/about.html
+++ b/about.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+    <!--@media doesn't work without this-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>About-me</title>
+    <!--Css stylesheets and bootstrap files-->
     <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/about/css/nav-bar.css">
     <link rel="stylesheet" href="static/about/css/about.css">
@@ -14,7 +16,7 @@
 </head>
 
 <body>
-    
+    <!--Top navigation bar-->
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
         <div class="container">
             <a class="navbar-brand" href="index.html">Andrei Cruceru</a>
@@ -24,11 +26,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
+                    <!--List of options-->
                     <li class="nav-item"><a class="nav-link" href="#introduction">Introduction</a></li>
                     <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link" href="#education">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="#hobbies">Hobbies</a></li>
                     <li class="nav-item"><a class="nav-link" href="#learning">Learning</a></li>
+                    <!--Dropdown options-->
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Projects </a>
                         <div class="dropdown-menu">
@@ -39,16 +43,16 @@
                         </div>
                     </li>
                 </ul>
-
+                <!--Feedback and contact buttons-->
                 <span class="navbar-text actions"> 
-                    <a class="login" href="review.html">Feedback</a>
+                    <a class="feedback" href="review.html">Feedback</a>
                     <a class="btn btn-light action-button" role="button" href="Contact.html">Contact</a>
                 </span>
 
             </div>
         </div>
     </nav>
-
+    <!--Immage of myself-->
     <div id="myself">
         <img src="static/about/css/myself.jpeg" width="290" height="360" alt=myself">
     </div>
@@ -103,7 +107,7 @@
          between 2010-2014. This is where I started learning my first programming language, creating simple aplications and algorithms using
          Pascal. <br><br>
 
-         About <a href="http://cnnt-puc.net/" target="_blank" rel="noopener noreferrer">Colegiul National Nicolaie Titulescu.</a>
+         About <a href="http://cnnt-puc.net/" target="_blank" rel="noopener noreferrer">Colegiul National Nicolaie Titulescu.</a> <br>
          About <a href="https://en.wikipedia.org/wiki/Pascal_(programming_language)" target="_blank" rel="noopener noreferrer">Pascal.</a> <br><br>
 
          Here, I studied Microsoft Office and obtained my European Computing Driving License qualification(ECDL). <br><br>
@@ -159,8 +163,8 @@
             database in Microsoft Access, the basics of computer science, and how to program in Java. <br><br>
             If you would like to see my progress, I have put together a list of projects I have been working on <a href="#navcol-1">here</a>.
                   
-    </div>
-
+    </div>    
+    <!--Footer with icons-->
     <div class="footer">
         <footer>
             <div class="social">
@@ -169,6 +173,7 @@
                 <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer"><i class="icon ion-social-twitter"></i></a>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="icon ion-social-facebook"></i></a></div>
             <ul class="list-inline">
+                <!--In-line links-->
                 <li class="list-inline-item"><a href="index.html">Home</a></li>
                 <li class="list-inline-item"><a href="review.html">Feedback</a></li>
                 <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
