--- a/Contact.html
+++ b/Contact.html
@@ -18,6 +18,7 @@
         <body>                           
            <section>
                <div class ="container">
+                   <!--On submit will redirect to the 3rd party website-->
                    <form action="https://formspree.io/f/xgepprva" method="POST" id="my-form">
                        <div class="form-group">
                            <label for="firstName">First Name</label>
