--- a/about.html
+++ b/about.html
@@ -52,14 +52,16 @@
             </div>
         </div>
     </nav>
+    <div class="center-title">
+        <p>About me</p>
+    </div>
     <!--Immage of myself-->
     <div id="myself">
-        <img src="static/about/css/myself.jpeg" width="290" height="360" alt=myself">
+        <img src="static/about/css/myself.jpeg" width="100%" height="100%" alt=myself">
     </div>
 
     <div id="introduction">
-        <p>About me</p>
-        <strong>Present:</strong> <br> <br>
+        <p>Present:</p>
         Full-time student at Buckinghamshire New University and part-time Specialist cleaning manager at Ryemead Comercial Group. <br><br>
         I am curently studying Data science at Bukcs New University. I enrolled for this course in September
         2020 and I am expected to graduate in June 2023. <br> <br> What is <a href="Data-science.html">Data Science</a>? <br>
@@ -78,7 +80,7 @@
         Visit <a href="https://www.visitbuckinghamshire.org/article/high-wycombe"target="_blank" rel="noopener noreferrer">High Wycombe</a>. <br>
         Visit <a href="https://www.britannica.com/place/Romania"target="_blank" rel="noopener noreferrer">Romania</a> <br><br>
         
-        <strong>Past:</strong> <br><br>
+        <p>Past:</p>
         I lived in Romania until 2015. This is where I obtaind many skills and qualifications while attending college. 
         I was a very good student and wanted to continue my higher education there, but unable due to financial reasons. <br>
         However, this seems to have been beneficial to me, as now I can attend a better, more prestigious and more globaly recognised university. <br>
@@ -89,7 +91,7 @@
         In 2018 I started my curent job as an operative, and since then I obtained several promotions that lead to becoming a 
         Specialist Cleaning Manager. <br><br>
 
-        <strong>Future:</strong> <br><br>
+        <p>Future:</p> 
         My plan is to graduate as a Data Scientist with knowledge in Software Engeneering. Programming is something that allow us to create 
         anything we want, and our imagination is the limit. And I enjoy programming for this reason. <br><br>
         After graduation I would like to research domain knowledge to improve my data science abilitites and become a worldwide recognised 
