--- a/BlueJ-Game.html
+++ b/BlueJ-Game.html
@@ -356,7 +356,7 @@
                 <p id="title">
                     Other functions
                 </p>
-                <strong>Help Map</strong> <br>
+                <p class="subtitle">Help Map</p>
                 The player can track it's progress through the map by typing 'see location' in 
                 the terminal window. This will print a full sized map that will show the player it's tracks from the start point 
                 to it's current location.
@@ -365,7 +365,7 @@
                 <img src="static/game/img/Map-location.JPG" alt="location" width="100%" height="100%">
             </div>
             <div class="text">
-                <strong>Hide stats/items</strong> <br>
+                <p class="subtitle">Hide stats/items</p>
                 The player can chose weather he will see it's status or items on the screen by typing show/hide items 
                 or show/hide stats. 
             </div>
@@ -376,7 +376,7 @@
                 <img src="static/game/img/show-stats-command.JPG" alt="stats" width="100%" height="100%">
             </div>
             <div class="text">
-                <strong>Database</strong> <br>
+                <p class="subtitle">Database</p> 
                 The player can see a full list of game objects and a short description of them 
                 by typing 'database' in the terminal window.
             </div>
@@ -384,7 +384,7 @@
                 <img src="static/game/img/database.JPG" alt="database" width="100%" height="100%">
             </div>
             <div class="text">
-                <strong>Monsters</strong> <br>
+                <p class="subtitle">Monsters</p> 
                 The player can see a full list of monsters with their stats and the type of items 
                 they drop on kill.
             </div>
