--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 <html>
 
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>About me</title>
     <link rel="stylesheet" href="Bootstrap/css/bootstrap-theme.css">
     <link rel="stylesheet" href="static/nav-bar.css">
     <link rel="stylesheet" href="static/about/css/about.css">
@@ -10,11 +13,7 @@
 
   <body>
     <div class="container">
-      <div class="vertical-nav">
-        <h4 class="text-center">
-          <img class="img-fluid" src="" width=100%>
-        </h4>
-        <h4></h4>
+      <div class="vertical-nav">        
         <div class="button-group">
           <ul class="list">
             <li class="list-item"><button class="vnav-b" id="why" onclick="displayMl1()">About me</button></li>
