--- a/Blog.html
+++ b/Blog.html
@@ -7,6 +7,7 @@
     <title>Blog</title>
     <link rel="stylesheet" href="static/blog/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/blog/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="static/about/fonts/ionicons.min.css">
     <link rel="stylesheet" href="static/blog/css/blog.css">
   </head>
   <body>
@@ -32,5 +33,22 @@
           </div>
       </div>
   </div>
+  
+  <div class="footer">
+    <footer>
+        <div class="social">
+            <a href="https://github.com/andreicruceru95" target="_blank" rel="noopener noreferrer"><i class="icon ion-social-github"></i></a>
+            <a href="https://www.linkedin.com/in/andrei-cruceru-517473116/" target="_blank" rel="noopener noreferrer"><i class="icon ion-social-linkedin"></i></a>
+            <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer"><i class="icon ion-social-twitter"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="icon ion-social-facebook"></i></a></div>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="index.html">Home</a></li>
+            <li class="list-inline-item"><a href="review.html">Feedback</a></li>
+            <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
+            
+        </ul>
+        
+    </footer>
+</div>
   </body>
 </html>
