--- a/Contact.html
+++ b/Contact.html
@@ -2,7 +2,8 @@
     <html>
         <head>
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <title>Contact</title>            
+            <title>Contact</title>   
+            <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">         
             <link rel="stylesheet" href="static/contact/css/contact.css">
             <link rel="stylesheet" href="static/about/css/footer.css">
             <link rel="stylesheet" href="static/about/fonts/ionicons.min.css">            
@@ -51,8 +52,6 @@
                     <ul class="list-inline">
                         <li class="list-inline-item"><a href="index.html">Home</a></li>
                         <li class="list-inline-item"><a href="review.html">Feedback</a></li>
-                        <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
-                        
                     </ul>
                     
                 </footer>
