--- a/places-visit.html
+++ b/places-visit.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
             <title>Places I visited</title>
             <script type ="text/javascript" src="static/jquery-3.5.1.min.js"></script>
             <script type = "text/javascript"
@@ -74,10 +76,8 @@
                       <div class="item">
                         <img src="static/it/jpg/it1.jpg" />
                         <div class="caption">
-                            Home of one of the oldest and greatest empires in Europe. Rome is the capital and one of 
-                            the oldest cities in Italy. The ruins of an old civilisation is proof of the power 
-                            they had thousands of years ago. They also host the biggest church in the world, St Peter Basilica 
-                            and some amazing art of Michel Angello.
+                            Rome is the capital and one of the oldest cities in Italy. The ruins of an old civilisation is proof of the power 
+                            they had thousands of years ago.
                         </div>
                       </div>                    
                     </div>
