--- a/Contact.html
+++ b/Contact.html
@@ -17,30 +17,32 @@
                    <form action="https://formspree.io/f/xgepprva" method="POST" id="my-form">
                        <div class="form-group">
                            <label for="firstName">First Name</label>
-                           <input type="text" id="firstName" name="firstName" placeholder="ex: 'John'" required>
+                           <input type="text" id="firstName" name="firstName" placeholder="ex: 'John'" >
+                           <p id="VFname">First name is required!</p>
                        </div>
 
                        <div class="form-group">
                            <label for="lastName">Last Name</label>
-                           <input type="text" id ="lastName" name="lastName" placeholder="ex: 'Smith'" required>
+                           <input type="text" id ="lastName" name="lastName" placeholder="ex: 'Smith'" >
+                           <p id="VLname">Last name is required!</p>
                        </div>
 
                        <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id ="email" name="email" placeholder="ex: 'johnsmith@hotmail.com" required>
+                        <input type="email" id ="email" name="email" placeholder="ex: 'johnsmith@hotmail.com" >
+                        <p id="Vemail">Email is required!</p>
                     </div>
 
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your text here.." required></textarea>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your text here.." ></textarea>
+                        <p id="Vmessage">Message is required!</p>
                     </div>
 
-                    <button type="submit">Submit</button>
-
+                    <button type="submit" id="submit">Submit</button>
+                    <div id="status"></div>
                    </form>
-               </div>
-
-               <div id="status"> </div>               
+               </div>                             
                
                <div class="footer">
                 <footer>
