--- a/review.html
+++ b/review.html
@@ -23,39 +23,43 @@
               <div class="container" >
 
                 <div class="row">
-                  <form id="form" onsubmit="feedbackUpdate()">
+                  <form id="form">
                   <div class="col-25">
                     <label for="fname">First Name </label>
+                  <p id="VFfname">Name cannot be null!</p>
                   </div>
                     <div class="col-75">
-                      <input type="text" required placeholder="Your name.." id="fname" name="fname"  >
+                      <input type="text"  placeholder="Your name.." id="fname" name="fname"  >
                     </div>
                   </div>
                    
                   <div class="row">
                   <div class="col-25">
                     <label for="lname">Last Name</label>
+                    <p id="VFlname">Name cannot be null!</p>
                   </div>
                   <div class="col-75">  
-                    <input type="text" required placeholder="Your last name.." id="lname" name="lname" >
+                    <input type="text"  placeholder="Your last name.." id="lname" name="lname" >
                   </div>
                 </div>
                
                 <div class="row">
                   <div class="col-25">
                     <label for="date">Date</label>
+                    <p id="VFdate">Date cannot be null!</p>
                   </div>
                   <div class="col-75">
-                    <input type="date" placeholder ="Date.." id="date" required >
+                    <input type="date" placeholder ="Date.." id="date"  >
                   </div>
                 </div>
 
                 <div class="row">
                   <div class="col-25">
                    <label for="feedback">Feedback</label>
+                   <p id="VFfeedback">Feedback cannot be null!</p>
                   </div>
                   <div class="col-75">
-                    <textarea id="feedback" name="feedback" placeholder="Write something.." style="height:200px" required ></textarea>
+                    <textarea id="feedback" name="feedback" placeholder="Write something.." style="height:200px" ></textarea>
                   </div>
 
                 </div>
