--- a/BlueJ-Game.html
+++ b/BlueJ-Game.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Game</title>
     <link rel="stylesheet" href="static/game/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/about/css/nav-bar.css">
     <link rel="stylesheet" href="static/about/css/footer.css">
     <link rel="stylesheet" href="static/about/fonts/ionicons.min.css">
     <link rel="stylesheet" href="static/game/fonts/font-awesome.min.css">
@@ -15,39 +14,7 @@
 
   </head>
 
-  <body>
-    <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Andrei Cruceru</a>
-        <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-          <ul class="nav navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-            <li class="nav-item"><a class="nav-link" href="#game">Game</a></li>
-            <li class="nav-item"><a class="nav-link" href="#maps">Maps</a></li>
-            <li class="nav-item"><a class="nav-link" href="#functions">Functions</a></li>
-            <li class="nav-item dropdown">
-              <a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Code </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="https://github.com/andreicruceru95/App06-Group">Source Code</a>
-                <a class="dropdown-item" href="https://github.com/andreicruceru95/App06-Group/wiki/Game">Wiki Page</a>
-              </div>
-            </li>
-          </ul>
-
-          <span class="navbar-text actions">
-            <a class="login" href="review.html">Feedback</a>
-            <a class="btn btn-light action-button" role="button" href="Contact.html">Contact</a>
-          </span>
-
-        </div>
-      </div>
-    </nav>
-
-
+  <body> 
     <div class="text">
       <p id="header">World of Zuul game</p>
     </div>
@@ -173,9 +140,8 @@
               <h3 class="name">Rory</h3>
               <p class="title">Story Design</p>
               <p class="description">Rory has been an important asset for this project.
-                He has been mainly responsible with writing the story, but he also proved
-                very helpfull in bringing new functions ideas.
-                He also designed some of the maps, to go along with the story.
+                He has been mainly responsible with writing the story. He was also heavily involved 
+                in designing nut just the maps, but quests and items.
               </p>
               <div class="social">
                 <a href="#"><i class="fa fa-facebook-official"></i></a>
